--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <h2>Analista Programador</h2>
                 </header>
 
-                <p>Dos años de carrera más uno de Proyecto donde aprendí varios lenguajes y herramientas,
-                    y mas importante, conceptos sobre el Desarrollo de Software.
+                <p>Dos años de carrera más uno de Proyecto, donde aprendí varios lenguajes y herramientas,
+                    y más importante, conceptos sobre el Desarrollo de Software.
                     <br>
                     Me considero dedicado y bueno a la hora de solucionar problemas.
                 </p>
@@ -167,12 +167,12 @@
                     </div>
                 </div>
                 <div id="cardProyectProyectosReact" class="grid-item-proyect">
-                    <h3>Pequelos Proyectos React</h3>
+                    <h3>Pequeños Proyectos React</h3>
                     <div class="div-link-proyect">
-                        <a class="btnAbrirInfo link-proyect" onclick="cargarCarrusel('ProyectosDuranteLaCarrera')"
-                            id="btnProyectosDuranteLaCarrera">Más Info.</a>
+                        <a class="btnAbrirInfo link-proyect" onclick="cargarCarrusel('ProyectosReact')"
+                            id="btnProyectosReact">Más Info.</a>
                     </div>
-                </div>                
+                </div>
                 <div id="cardProyectPortafolioWeb" class="grid-item-proyect">
                     <h3>Este Portafolio</h3>
                     <div class="div-link-proyect">
@@ -180,20 +180,15 @@
                             id="btnPortafolioWeb">Más Info.</a>
                     </div>
                 </div>
-                <div id="cardProyectProyectosDuranteLaCarrera" class="grid-item-proyect">
-                    <h3>Proyectos Durante La Carrera</h3>
-                    <div class="div-link-proyect">
-                        <a class="btnAbrirInfo link-proyect" onclick="cargarCarrusel('ProyectosDuranteLaCarrera')"
-                            id="btnProyectosDuranteLaCarrera">Más Info.</a>
-                    </div>
-                </div>
+
             </article>
         </section>
         <div class="abautMeContainer">
             <h2 id="abouteMe" class="subtitle">Acerca de mí</h2>
             <div>
                 <p>
-                    Cursé dos años de carrera más uno de Proyecto Final, al finalizar cada semestre entragábamos en grupo
+                    Cursé dos años de carrera más uno de Proyecto Final, al finalizar cada semestre entragábamos en
+                    grupo
                     un proyecto sobre los lenguajes, herramientas y conceptos estudiados ese semestre.
                     <br>
                     En el Proyecto Final desarrollamos junto a mi compañero Nicolás Troche un Sistema para Administrar y
@@ -227,8 +222,8 @@
             </ul>
             <ul>
                 <li>
-                    <a href="https://drive.google.com/file/d/10ltS0GobEU76BHrHknmbbtuy5rdPucW3/view?usp=drive_link" title="CV en Drive" target="_blank"
-                        rel="noopener noreferrer">
+                    <a href="https://drive.google.com/file/d/10ltS0GobEU76BHrHknmbbtuy5rdPucW3/view?usp=drive_link"
+                        title="CV en Drive" target="_blank" rel="noopener noreferrer">
                         <img class="iconFooter" src="img/drive.webp" alt="logo de LinkedIn"><strong>CV</strong>
                     </a>
                 </li>
@@ -245,7 +240,7 @@
                     </a>
                 </li>
             </ul>
-            <ul>                
+            <ul>
                 <li>
                     <i class="fa fa-copyright" aria-hidden="true">©Yolaus Godoy - 2024</i>
                 </li>
@@ -259,11 +254,11 @@
                         <p>Este es el Proyecto Final en el que conseguimos junto a mi compañero Nicolas Troche el título
                             de Analista Programador.
                             <br>
-                            En el se desarrolló un sistema para administrar y gestionar la
+                            En él se desarrolló un sistema para administrar y gestionar la
                             sanidad y la consanguinidad en bovinos lecheros de forma sencilla, para el
                             Establecimiento La Palma S.R.L.
                             <br>
-                            En cuanto a las herramientas de desarrollo utilizamos JAVA y MySQL para el desarrollo y
+                            En cuanto a las herramientas de desarrollo, utilizamos JAVA y MySQL para el desarrollo y
                             manejo de base de datos. En cuanto al IDE utilizado, comenzamos utilizando
                             IntelliJ IDEA pero al final decidimos cambiar a Apache NetBeans IDE.
                             <br>
@@ -293,10 +288,10 @@
                         <p>Este es el prototipo de un E-Commerce sobre una tienda de Ropa y Accesorios para vestir, que
                             estamos desarrollando en los tiempos libres con Nicolás Troche.
                             <br>
-                            Desarrollado con las herramientas principales React, Node.js y MySQL
+                            Utilizando como herramientas principales React, Node.js, Vite y MySQL.
                             <br>
-                            La idea con este proyecto es ir reafirmando y conociendo nuevos conceptos además de generar
-                            experiencia en lo que viene a ser el Desarrollo Web
+                            La idea con este proyecto es ir reafirmando y conociendo nuevos conceptos, además de generar
+                            experiencia en lo que viene a ser el Desarrollo Web.
                         </p>
                         <a class="btnRepositorio" target="_blank"
                             href="https://github.com/YolausGG/ProyectosReact-TrocheGodoy/tree/main">Repositorio</a>
@@ -313,56 +308,27 @@
             <dialog id="dialogProyectosReact">
                 <div class="containerInfo">
                     <div class="containerInfoText">
-                        <h3 class="titleProyect">Proyectos durante la Carrera</h3>
-                        <p>En este Repositorio estoy subiendo los pequeños proyectos, funciones, repartidos,
-                            fragmentos de código que hice mientras curse la carrera de Analista Programador.
+                        <h3 class="titleProyect">Pequeños proyectos React</h3>
+                        <p>En este Repositorio estoy subiendo los pequeños proyectos en React; por el momento tiene el
+                            famoso juego <a class="linkAWeb" href="https://yolausgg.github.io/proyects/tres-en-linea/"
+                                target="_blank"><u>Tres en línea</u></a> y una página donde se muestra información de
+                            los personajes,
+                            lugares y episodios de la serie <a class="linkAWeb"
+                                href="https://yolausgg.github.io/proyects/rick-and-morty/" target="_blank"><u>Rick &
+                                    Morty</u></a> extraída de una API.
                             <br>
-                            Desarrollados con distintas herramientas y lenguajes.
+                            Desarrollados con React y Vite como principales herramientas.
                             <br>
-                            La idea con este Repositorio es ir mostrando lo que hice durante la carrera.
+                            Con este Repositorio busco mejorar en sus conceptos para posteriores proyectos más
+                            ambiciosos.
                         </p>
                         <a class="btnRepositorio" target="_blank"
-                            href="https://github.com/YolausGG/ProyectosDuranteLaCarrera">Repositorio</a>
+                            href="https://github.com/YolausGG/React">Repositorio</a>
                     </div>
                     <div class="containerCarruselInfo">
                         <div id="idImgCarruselProyectosDuranteLaCarrera">
-                            <img class="imgCarrusel" src="img/HerramientasProyectosDutanteLaCarrera.webp"
-                                alt="Imagen del Carrusel" loading="lazy">
-                        </div>
-                        <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasProyectosDuranteLaCarrera" src="img/atras.webp"
-                                alt="flecha atras">
-                            <img class="derImgCarrusel" id="adelanteProyectosDuranteLaCarrera" src="img/atras.webp"
-                                alt="flecha adelante">
-                        </div>
-                    </div>
-                </div>
-                <button class="btnCerrarInfo"><i class="fi-br-cross"></i></button>
-            </dialog>
-            <dialog id="dialogProyectosDuranteLaCarrera">
-                <div class="containerInfo">
-                    <div class="containerInfoText">
-                        <h3 class="titleProyect">Proyectos durante la Carrera</h3>
-                        <p>En este Repositorio estoy subiendo los pequeños proyectos, funciones, repartidos,
-                            fragmentos de código que hice mientras curse la carrera de Analista Programador.
-                            <br>
-                            Desarrollados con distintas herramientas y lenguajes.
-                            <br>
-                            La idea con este Repositorio es ir mostrando lo que hice durante la carrera.
-                        </p>
-                        <a class="btnRepositorio" target="_blank"
-                            href="https://github.com/YolausGG/ProyectosDuranteLaCarrera">Repositorio</a>
-                    </div>
-                    <div class="containerCarruselInfo">
-                        <div id="idImgCarruselProyectosDuranteLaCarrera">
-                            <img class="imgCarrusel" src="img/HerramientasProyectosDutanteLaCarrera.webp"
-                                alt="Imagen del Carrusel" loading="lazy">
-                        </div>
-                        <div class="conainerFlechitasCarrusel">
-                            <img class="izqImgCarrusel" id="atrasProyectosDuranteLaCarrera" src="img/atras.webp"
-                                alt="flecha atras">
-                            <img class="derImgCarrusel" id="adelanteProyectosDuranteLaCarrera" src="img/atras.webp"
-                                alt="flecha adelante">
+                            <img class="imgCarrusel" src="img/ProyectosReact.webp" alt="Imagen del Carrusel"
+                                loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -376,11 +342,11 @@
                             <br>
                             Desarrollados con HTML, CSS y JavaSctipt desde Visual Estudio Code (VSC).
                             <br>
-                            La idea con este Repositorio es que se pueda ver como esta hecho y que si
+                            La idea con este Repositorio es que se pueda ver cómo está hecho y que, si
                             alguien desea, saque ideas o fragmentos del código para su propio uso.
                         </p>
                         <a class="btnRepositorio" target="_blank"
-                            href="https://github.com/YolausGG/ProyectosDuranteLaCarrera">Repositorio</a>
+                            href="https://github.com/YolausGG/PortafolioWeb">Repositorio</a>
                     </div>
                     <div class="containerCarruselInfo">
                         <div id="idImgCarruselPortafolioWeb">
