--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <title>Portafolio de Yolaus Godoy</title>
 
-   
+
 </head>
 
 <body>
@@ -189,13 +189,12 @@
             <h2 id="abouteMe" class="subtitle">Acerca de mí</h2>
             <div>
                 <p>
-                    Cursé dos años de carrera más uno de Proyecto Final, al finalizar cada semestre entragábamos en
-                    grupo
-                    un proyecto sobre los lenguajes, herramientas y conceptos estudiados ese semestre.
+                    Soy Yolaus, un chico de 24 años graduado como Analista Programador buscando
+                    insertarse en el mercado laboral IT para crecer profesionalmente, demostrar mis capacidades, seguir aprendiendo y
+                    conseguir metas.
                     <br>
-                    En el Proyecto Final desarrollamos junto a mi compañero Nicolás Troche un Sistema para Administrar y
-                    Gestionar la Sanidad y la Consanguinidad en Bovinos lecheros de forma sencilla, para el
-                    Establecimiento La Palma S.R.L.
+                    Actualmente especializándome en React, CSS y JavaSctipt, pero también poseo gran conocimiento en
+                    lenguajes más enfocados al Backend.
                     <br>
                 </p>
                 <img class="imgAbautMe" src="img/YolaFotoCV_R.png" alt="imagen de Yolaus Godoy">
